syntax = "proto3";

package grpc;

service Gateway {
    rpc subscribeTotalAccessCount (EmptyRequest) returns (stream CountResponse) {}
    rpc subscribeCurrentUserCount (EmptyRequest) returns (stream CountResponse) {}
}

message EmptyRequest {}

message CountResponse {
   int64 count = 1;
}

